k8s/registry/registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      app: af
      tier: registry
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: af
        tier: registry
    spec:
      containers:
      - name: registry
        image: smartcommunitylab/af-registry
        # resources:
        #   limits:
        #     cpu: "0.3"
        #     memory: "256Mi"
        #   requests:
        #     cpu: "0.1"
        #     memory: "128Mi"
        imagePullPolicy: "Always"
        ports:
          - containerPort: 8761
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 20
          successThreshold: 2
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 20
