k8s/registry/registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  selector:
    app: af
    tier: registry
  ports:
  - protocol: TCP
    port: 8761
    targetPort: 8761
  type: NodePort
