k8s/registry/registry-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
 - host: registry.local
   http:
     paths:
     - path: /(.*)
       backend:
         serviceName: registry
         servicePort: 8761
